RESOLVED FIXED59368
Fix strict OwnPtrs in HTMLMediaElement and HTTPHeaderMap
https://bugs.webkit.org/show_bug.cgi?id=59368
Summary Fix strict OwnPtrs in HTMLMediaElement and HTTPHeaderMap
Adam Barth
Reported 2011-04-25 15:54:19 PDT
Fix strict OwnPtrs in HTMLMediaElement and HTTPHeaderMap
Attachments
Patch (1.80 KB, patch)
2011-04-25 15:55 PDT, Adam Barth
levin: review+
Adam Barth
Comment 1 2011-04-25 15:55:03 PDT
Adam Barth
Comment 2 2011-04-25 15:56:05 PDT
Note You need to log in before you can comment on or make changes to this bug.