2011-04-25  Adam Barth  <abarth@webkit.org>

Reviewed by David Levin.

        Fix strict OwnPtrs in HTMLMediaElement and HTTPHeaderMap
        https://bugs.webkit.org/show_bug.cgi?id=59368

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::HTMLMediaElement):
        * platform/network/HTTPHeaderMap.cpp:
        (WebCore::HTTPHeaderMap::copyData):


Canonical link: https://commits.webkit.org/74543@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84816 268f45cc-cd09-0410-ab3c-d52691b4dbfc